syntax = "proto3";

package pifina;

import "google/protobuf/timestamp.proto";

message PifinaTelemetryMessage {
    string sourceHost = 1;
    repeated PifinaMetric metrics = 2;
}

message PifinaMetric {
    uint32 sessionId = 1;
    uint64 value = 2;
    string valueType = 3;
    string metricName = 4;
    google.protobuf.Timestamp lastUpdated = 5;
}